--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -151,6 +151,41 @@ html{
     font-family: 'Bree Serif', serif;
 
 } 
+#order .box p span{
+
+        content: "\20B9";
+}
+ .box div{
+    justify-content: center;
+    margin-left: 36px;
+}
+ div .stars i{
+    color: gold;
+    padding: 0 0.1rem;
+    font-size: 22px;
+    justify-content: center;
+    margin-left: 0px;
+    margin-top: 14px;
+}
+    
+.price_block{
+    
+  
+    margin-top: 23px;
+    color: rgb(150, 60, 60);
+    margin-left: 30px;
+  
+}
+
+.currrency_icon{
+    font-size: 5px;
+ 
+}
+.amount{
+    font-size: 28px;
+}
+  
+
 
 /* Services Section */
 #services{
@@ -180,6 +215,25 @@ html{
 
 } 
 
+.search_banner{
+   /* position: absolute; */
+    justify-content: center;
+    height: 25%;
+}
+.container-box{
+    justify-content: center;
+    /* border: solid red; */
+    /* height: 5%; */
+    margin: 135px 134px;
+    
+}
+.container-box img{
+    justify-content: center;
+    width: 100%;
+    /* height: 5%; */
+}
+
+
 /* Clients Section */
 #client-section{ 
     position: relative;
@@ -188,7 +242,7 @@ html{
 #client-section::before{
  content: "";
  position: absolute;
- background: url('../bg.jpg');
+ background: url('../bg3.jpg');
  width: 100%;
  height: 100%;
  z-index: -1;
@@ -208,6 +262,71 @@ html{
 #clients img{
     height: 124px;
 }
+
+
+/* review section */
+
+.review{
+    background: url(../images/review-bg.jpg), linear-gradient(#0098a1, #0098a1) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+  }
+  
+  .review .heading{
+    color:#fff;
+    padding-bottom: 4rem;
+  }
+  
+  .review .heading span{
+    color:gold;
+  }
+  
+  .review .box-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .review .box-container .box{
+    width:35rem;
+    margin:4rem 2rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    box-shadow: 0 .3rem .5rem #000;
+    background:#fff;
+  }
+  
+  .review .box-container .box .image{
+    margin-top: -5rem;
+  }
+  
+  .review .box-container .box .image img{
+    height:10rem;
+    width:10rem;
+    border-radius: 50%;
+    object-fit: cover;
+    border: .7rem solid #fff;
+  }
+  
+  .review .box-container .box .content h3{
+    font-size: 2rem;
+    color:#0098a1;
+  }
+  
+  .review .box-container .box .content p{
+    font-size: 1.4rem;
+    color:#333;
+    padding:.5rem 1.5rem;
+  }
+  
+  .review .box-container .box .content .stars i{
+    color:gold;
+    font-size: 1.7rem;
+    padding:1rem .1rem;
+  }
+  
 
 
 /* Contact Section */
@@ -273,7 +392,7 @@ html{
   }
   
   .footer .credit span{
-    color:#0098a1;
+    color:#1b8f4b;
   }
   
   .footer .icons a{
@@ -290,7 +409,7 @@ html{
   }
   
   .footer .icons a:hover{
-    background:#ecf3f3;
+    background:#1b8f4b;
     color: black;
   }
   
@@ -309,10 +428,11 @@ html{
 
 
 
-.h-primary{
+.h-primary,.order-heading{
     font-family: 'Bree Serif', serif;
     font-size: 3.8rem;
     padding: 12px;
+   
 }
 
 .h-secondary{
@@ -325,7 +445,8 @@ html{
     text-align: center;
 }
 
-.btn, .btn-1{
+
+.btn, .btn-1 {
     /* padding: 6px 20px;
     border: 2px solid white;
     background-color: rgb(219, 15, 15);
@@ -353,10 +474,21 @@ html{
     justify-items: center; */
     margin-top: 22px;
 }
+.btn a{
+    text-decoration: none;
+    color: white;
+}
+.btn a:hover{
+    background-color: white;
+    color: rgb(219, 15, 15);
+    /* border:solid rgb(219, 15, 15); */
+    transition-duration: 0.5s;
+}
 .btn:hover,.btn-1:hover{
     background-color: white;
     color: rgb(219, 15, 15);
     border:solid rgb(219, 15, 15);
+    transition-duration: 0.5s;
 }
 .btn-1{
       margin-left: 250px;
